Viewのメソッド作成、listHtmlメソッドは一旦保留

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
             </div>
 
         </section>
+        <section id="extraPage" class="container shadow my-5 py-3 d-none">
+        </section>
     </main>
     <footer class="mt-auto mb-5 p-3">
         <div class="d-flex justify-content-center">
-            <small><a href="https://twitter.com/leandro83g" target="_blank">Copyright ©️ Leandro,inc　All Rights Unreserved</a></small>
+            <small>Copyright ©️ <a href="https://twitter.com/leandro83g" target="_blank">Leandro,inc</a>　All <a href="https://twitter.com/leandro83g" target="_blank">Rights</a> Unreserved</small>
         </div>
     </footer>
     
