htmlの変更、修正

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
                         <h2 class="">${Selecter}</h2>
                     </div>
                     <div class="col-12 mt-3">
-                        <button type="button" class="col-12 col-md-6 p-3 item-left btn btn-lg btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="text-2vw ">Model</span>
-                        </button>
-                        <div id="brandSelect"class="dropdown-menu col-11" aria-labelledby="dropdownMenuButton">
-                            <div class="dropdown-item text-2vw">Model</div>
-                            <div class="dropdown-item text-2vw">Another action</div>
-                            <div class="dropdown-item text-2vw">Something else here</div>
-                        </div>
+                        <select id="brandSelect" class="custom-select col-12 col-md-6 p-3 text-2vw" >
+                            <option class="p-3 text-2vw" selected>Choose...</option>
+                            <option class="p-3 text-2vw" value="1">One</option>
+                            <option class="p-3 text-2vw" value="2">Two</option>
+                            <option class="p-3 text-2vw" value="3">Three</option>
+                        </select>
                     </div>
                 </div>
             </div>
@@ -39,9 +37,9 @@
                     <div class="col-12">
                         <h2 class="">${ParamaterInput}</h2>
                     </div>
-                    <div class="col-12 mt-3  d-flex">
-                        <input type="text" class="col-3 col-md-1 bg-gray text-2vw p-1" value="0">
-                        <span class="ml-2 text-2vw">W</span>
+                    <div class="col-12 mt-3  input-group d-flex">
+                        <input type="text" class="form-control col-3 col-md-2 text-2vw p-3" placeholder="0" >
+                        <span class="ml-2 text-2vw align-self-end">W</span>
                     </div>
                 </div>
             </div>
