--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Battery Finder Program</title>
 </head>
-<body class="d-flex flex-column">
+<body id="body" class="d-flex flex-column">
     <header class="p-2 bg-dark">
         <h2 class="white" >Battery Finder Program</h2>
     </header>
