--- a/index.html
+++ b/index.html
@@ -17,70 +17,65 @@
     </header>
     <main>
         <section class="container shadow my-5 py-3">
-            <div class="row mt-5">
-                <div class=" col-12">
-                    <div class="col-12">
-                        <h2 class="">${Selecter}</h2>
-                    </div>
-                    <div class="col-12 mt-3">
-                        <select id="brandSelect" class="custom-select col-12 col-md-6 p-3 text-2vw" >
-                            <option class="p-3 text-2vw" selected>Choose...</option>
-                            <option class="p-3 text-2vw" value="1">One</option>
-                            <option class="p-3 text-2vw" value="2">Two</option>
-                            <option class="p-3 text-2vw" value="3">Three</option>
-                        </select>
-                    </div>
-                </div>
+
+
+            <div class="col-12 mt-3">
+                <h2>${Selecter}</h2>
             </div>
-            <div class="row mt-5">
-                <div class=" col-12">
-                    <div class="col-12">
-                        <h2 class="">${ParamaterInput}</h2>
-                    </div>
-                    <div class="col-12 mt-3  input-group d-flex">
-                        <input type="text" class="form-control col-3 col-md-2 text-2vw p-3" placeholder="0" >
-                        <span class="ml-2 text-2vw align-self-end">W</span>
-                    </div>
-                </div>
+            <div class="col-12 mt-3">
+                <select id="brandSelect" class="custom-select col-12 col-md-6 p-3 text-2vw" >
+                    <option class="p-3 text-2vw" selected>Choose...</option>
+                    <option class="p-3 text-2vw" value="1">One</option>
+                    <option class="p-3 text-2vw" value="2">Two</option>
+                    <option class="p-3 text-2vw" value="3">Three</option>
+                </select>
             </div>
-            <div class="row mt-5">
-                <div class=" col-12">
-                    <div class="col-12">
-                        <h2 class="">${List}</h2>
-                    </div>
-                    <div class="col-12 mt-3  d-flex text-2vw">
-                        <table class="table table-striped col-12">
-                            <thead>
-                              <tr>
-                                <th scope="col">id</th>
-                                <th scope="col">Battery Name</th>
-                                <th scope="col">Estimated</th>
-                                <th scope="col">Handle</th>
-                              </tr>
-                            </thead>
-                            <tbody class="">
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td><button type="button" class="btn btn-primary">Show</button></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td><button type="button" class="btn btn-primary">Show</button></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td><button type="button" class="btn btn-primary">Show</button></td>
-                              </tr>
-                            </tbody>
-                          </table>
-                    </div>
-                </div>
+
+            <div class="col-12 mt-3">
+                <h2>${ParamaterInput}</h2>
+            </div>
+
+            <div class="col-12 mt-3  input-group d-flex">
+                <input type="text" class="form-control col-3 col-md-2 text-2vw p-3" placeholder="0" >
+                <span class="ml-2 text-2vw align-self-end">W</span>
+            </div>
+
+
+
+            <div class="col-12 mt-3">
+                <h2>${List}</h2>
+            </div>
+            <div class="col-12 mt-3  d-flex text-2vw">
+                <table class="table table-striped col-12">
+                    <thead>
+                        <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Battery Name</th>
+                        <th scope="col">Estimated</th>
+                        <th scope="col">Handle</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td><button type="button" class="btn btn-primary">Show</button></td>
+                        </tr>
+                        <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td><button type="button" class="btn btn-primary">Show</button></td>
+                        </tr>
+                        <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td><button type="button" class="btn btn-primary">Show</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
         </section>
